--- a/src/index.scss
+++ b/src/index.scss
@@ -44,3 +44,11 @@ ul {
 .completed {
   text-decoration: line-through;
 }
+
+.footer {
+  text-align: center;
+  margin: 2rem 0;
+  a {
+    color: #007bff;
+  }
+}
